--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<meta charset='utf-8' />
-	<title>facebook quiz</title>
-	<link href='/css/quiz.css' rel='stylesheet' type='text/css'>
-	<script src="js/require.js" data-main="js/compiled/main"></script>
+  <title></title>
+  <link href='css/home.css' rel='stylesheet' type='text/css' />
 </head>
-
 <body>
-	<div class='quiz'>
-		<div class='questions'></div>
-		<div class='arrow-block'>
-			<div class='arrow prev'></div>
-			<div class='arrow next'></div>
-		</div>
-	</div>
+  <h1>Сумніваєшся, що подарувати близким на новорічні свята?</h1>
+  <h2>LG допоможе тобі у цьому!</h2>
+  <h3>Дай відповідь на декілька коротких запитань і отримай нашу рекомендацію</h3>
+  <a href='quiz.html'>Почати</a>
 </body>
-
 </html>
