add backbone remove compiled scrips

--- a/quiz.html
+++ b/quiz.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset='utf-8' />
 	<title>facebook quiz</title>
-	<link href='/css/quiz.css' rel='stylesheet' type='text/css'>
-	<script src='js/require.js' data-main='js/compiled/main'></script>
+	<link href='style/quiz.css' rel='stylesheet' type='text/css'>
+	<script data-main='script/compiled/main' src='script/lib/require.js'></script>
 </head>
 
 <body>
