--- a/index.html
+++ b/index.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title></title>
-  <link href='css/home.css' rel='stylesheet' type='text/css' />
+	<meta charset='utf-8' />
+	<title>facebook quiz</title>
+	<link href='style/main.css' rel='stylesheet' type='text/css' />
+	<script data-main='script/compiled/main' src='script/lib/require.js'></script>
 </head>
+
 <body>
-  <h1>Сумніваєшся, що подарувати близким на новорічні свята?</h1>
-  <h2>LG допоможе тобі у цьому!</h2>
-  <h3>Дай відповідь на декілька коротких запитань і отримай нашу рекомендацію</h3>
-  <a href='quiz.html'>Почати</a>
+
+	<div id='content'></div>
+
+	<!-- Home -->
+	<script type='text/template' class='index'>
+		<h1>Сумніваєшся, що подарувати близким на новорічні свята?</h1>
+	  <h2>LG допоможе тобі у цьому!</h2>
+	  <h3>Дай відповідь на декілька коротких запитань і отримай нашу рекомендацію</h3>
+	  <a href='#/quiz'>Почати</a>
+	</script>
+
+	<!-- Quiz -->
+	<script type='text/template' class='quiz spinner'>
+		<h2 class='question'></h2>
+		<div class='preview'></div>
+		<div class='answers'></div>
+	</script>
+
+	<!-- Quiz done -->
+	<script type='text/template' class='done'>
+		<h3>Найкращі подарунки – це подарунки від LG!</h3>
+		<i>Натисніть на товар,  щоб дізнатись про святкові пропозиції!</i>
+		<a href='#/quiz'><h3>пройти ще раз</h3></a>
+		<div class='share-box'>
+			<h3><b>Бажаєш виграти подарунок від LG?</b></h3>
+			Поділись нашим святковим генератором подарунків та приймай участь у розіграші
+			<a href='#/'>Поділитись</a>
+		</div>
+	</script>
+
+	<!-- Social auth -->
+	<script type='text/template' class='social-auth'>
+		<a href="#/" class="options-box no-follow" onclick="window.open(&quot;http://www.facebook.com/share.php?u=https%3A%2F%2Fpetitions.whitehouse.gov%2Fpetition%2Fimpose-personal-sanctions-president-ukraine-viktor-yanukovych-and-cabinet-ministers-ukraine-members%2Fh58Fz30V&amp;t=Impose+personal+sanctions+on+President+of+Ukraine+Viktor+Yanukovych+and+Cabinet+of+Ministers+of+Ukraine+members&quot;, &quot;facebook&quot;, &quot;status=0,toolbar=0,location=0,menubar=0,height=500,width=800,resizable=1&quot;); return false;">Facebook</a>
+	</script>
+
+	<!-- addresses -->
+	<script type='text/template' class='addresses'>
+		<h1>Купуй з 15 грудня по 15 січня товари LG у наступних місцях продажу та отримуй 10% знижки!</h1>
+		1. м. Київ, вул. Червоноармійська, 47. Ельдорадо
+		2. м. Київ, вул. Червоноармійська, 7. Ельдорадо
+		3. м. Київ, вул. Червоноармійська, 77. Ельдорадо
+		4. м. Київ, вул. Червоноармійська, 12. Ельдорадо
+		5. м. Київ, вул. Червоноармійська, 19. Ельдорадо
+		6. м. Київ, вул. Червоноармійська, 33. Ельдорадо
+		7. м. Київ, вул. Червоноармійська, 44. Ельдорадо
+	</script>
+
 </body>
+
 </html>
