--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div id='content'></div>
 
 	<!-- Home -->
-	<script type='text/template' class='index'>
+	<script type='text/template' name='index'>
 		<h1>Сумніваєшся, що подарувати близким на новорічні свята?</h1>
 	  <h2>LG допоможе тобі у цьому!</h2>
 	  <h3>Дай відповідь на декілька коротких запитань і отримай нашу рекомендацію</h3>
@@ -21,14 +21,14 @@
 	</script>
 
 	<!-- Quiz -->
-	<script type='text/template' class='quiz spinner'>
+	<script type='text/template' name='quiz' data-class='spinner'>
 		<h2 class='question'></h2>
 		<div class='preview'></div>
 		<div class='answers'></div>
 	</script>
 
 	<!-- Quiz done -->
-	<script type='text/template' class='done'>
+	<script type='text/template' name='done'>
 		<h3>Найкращі подарунки – це подарунки від LG!</h3>
 		<i>Натисніть на товар,  щоб дізнатись про святкові пропозиції!</i>
 		<a href='#/quiz'><h3>пройти ще раз</h3></a>
@@ -40,12 +40,12 @@
 	</script>
 
 	<!-- Social auth -->
-	<script type='text/template' class='social-auth'>
+	<script type='text/template' name='social-auth'>
 		<a href="#/" class="options-box no-follow" onclick="window.open(&quot;http://www.facebook.com/share.php?u=https%3A%2F%2Fpetitions.whitehouse.gov%2Fpetition%2Fimpose-personal-sanctions-president-ukraine-viktor-yanukovych-and-cabinet-ministers-ukraine-members%2Fh58Fz30V&amp;t=Impose+personal+sanctions+on+President+of+Ukraine+Viktor+Yanukovych+and+Cabinet+of+Ministers+of+Ukraine+members&quot;, &quot;facebook&quot;, &quot;status=0,toolbar=0,location=0,menubar=0,height=500,width=800,resizable=1&quot;); return false;">Facebook</a>
 	</script>
 
 	<!-- addresses -->
-	<script type='text/template' class='addresses'>
+	<script type='text/template' name='addresses'>
 		<h1>Купуй з 15 грудня по 15 січня товари LG у наступних місцях продажу та отримуй 10% знижки!</h1>
 		1. м. Київ, вул. Червоноармійська, 47. Ельдорадо
 		2. м. Київ, вул. Червоноармійська, 7. Ельдорадо
