added addresses, change scss

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
+	<a id='home' href='#/'>Home</a>
 
-	<div id='content'></div>
+	<div id='container'></div>
 
 	<!-- Home -->
 	<script type='text/template' name='index'>
@@ -28,7 +29,7 @@
 	</script>
 
 	<!-- Quiz done -->
-	<script type='text/template' name='done'>
+	<script type='text/template' name='quiz-done'>
 		<h3>Найкращі подарунки – це подарунки від LG!</h3>
 		<i>Натисніть на товар,  щоб дізнатись про святкові пропозиції!</i>
 		<a href='#/quiz'><h3>пройти ще раз</h3></a>
@@ -47,13 +48,15 @@
 	<!-- addresses -->
 	<script type='text/template' name='addresses'>
 		<h1>Купуй з 15 грудня по 15 січня товари LG у наступних місцях продажу та отримуй 10% знижки!</h1>
-		1. м. Київ, вул. Червоноармійська, 47. Ельдорадо
-		2. м. Київ, вул. Червоноармійська, 7. Ельдорадо
-		3. м. Київ, вул. Червоноармійська, 77. Ельдорадо
-		4. м. Київ, вул. Червоноармійська, 12. Ельдорадо
-		5. м. Київ, вул. Червоноармійська, 19. Ельдорадо
-		6. м. Київ, вул. Червоноармійська, 33. Ельдорадо
-		7. м. Київ, вул. Червоноармійська, 44. Ельдорадо
+		<ol>
+			<li>м. Київ, вул. Червоноармійська, 47. Ельдорадо</li>
+			<li>м. Київ, вул. Червоноармійська, 7. Ельдорадо</li>
+			<li>м. Київ, вул. Червоноармійська, 77. Ельдорадо</li>
+			<li>м. Київ, вул. Червоноармійська, 12. Ельдорадо</li>
+			<li>м. Київ, вул. Червоноармійська, 19. Ельдорадо</li>
+			<li>м. Київ, вул. Червоноармійська, 33. Ельдорадо</li>
+			<li>м. Київ, вул. Червоноармійська, 44. Ельдорадо</li>
+		</ol>
 	</script>
 
 </body>
