--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 	<!-- Quiz done -->
 	<script type='text/template' name='quiz-done'>
+		<h1 id='category'></h1>
 		<h3>Найкращі подарунки – це подарунки від LG!</h3>
 		<i>Натисніть на товар,  щоб дізнатись про святкові пропозиції!</i>
 		<a href='#/quiz'><h3>пройти ще раз</h3></a>
