add green color category

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<h1 id='category'></h1>
 		<h3>Найкращі подарунки – це подарунки від LG!</h3>
 		<i>Натисніть на товар,  щоб дізнатись про святкові пропозиції!</i>
-		<a href='#/quiz'><h3>пройти ще раз</h3></a>
+		<a href='#/quiz/restart'><h3>пройти ще раз</h3></a>
 		<div class='share-box'>
 			<h3><b>Бажаєш виграти подарунок від LG?</b></h3>
 			Поділись нашим святковим генератором подарунків та приймай участь у розіграші
